# smartGlass

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  build_release.bat  design-qa.md  lv_conf.h  lv_drv_conf.h  main.cpp
apps/lens_react_ui/: CMakeLists.txt  LensDataProvider.hpp  LensReactUI.cpp  LensReactUI.hpp  LensReactUICameraPage.cpp  LensReactUIEvents.cpp  LensReactUILifecycle.cpp  LensReactUIMeetingPage.cpp  LensReactUIMiscPages.cpp  LensReactUIMusicPage.cpp  LensReactUINavigationPage.cpp  LensReactUINotificationPage.cpp  LensReactUIPrompterPage.cpp  LensReactUISession.cpp  LensReactUITranslationPages.cpp  LensUIInternal.hpp  NavigationSimulation.cpp  NavigationSimulation.hpp  NotificationTimeline.cpp  NotificationTimeline.hpp  PageRuntime.hpp  SimulationLensDataProvider.cpp  camera_lifestyle_background_asset.c  camera_shutter_asset.c  home_icons_asset.c  nav_assets.c  nav_bicycle_icon.c  nav_flag_icon.c  realtime_translate_background_asset.c  session_clock_asset.c  smartglass_font_12_cjk.c  smartglass_font_14_cjk.c  smartglass_font_16_cjk.c  smartglass_font_20_cjk.c
apps/lens_react_ui/assets/: README.md  assets.json
esp-brookesia/: CMakeLists.txt
esp-brookesia/docs/: how_to_use_CN.md
esp-brookesia/src/core/: esp_brookesia_core_manager.cpp  esp_brookesia_style_type.h
esp-brookesia/src/systems/phone/: esp_brookesia_phone_app.cpp  esp_brookesia_phone_manager.cpp
esp-brookesia/src/systems/phone/stylesheets/1024_600/dark/: navigation_bar_data.h  recents_screen_data.h  status_bar_data.h  stylesheet.h
esp-brookesia/src/systems/phone/stylesheets/1280_800/dark/: navigation_bar_data.h  recents_screen_data.h  status_bar_data.h  stylesheet.h
esp-brookesia/src/systems/phone/stylesheets/800_1280/dark/: navigation_bar_data.h  recents_screen_data.h  status_bar_data.h  stylesheet.h
esp-brookesia/src/systems/phone/stylesheets/default/dark/: core_data.h
lv_drivers/sdl/: sdl_common.c
lv_drivers/wayland/: wayland.c
tests/: CMakeLists.txt  lens_data_provider_test.cpp  navigation_simulation_test.cpp  notification_timeline_test.cpp  page_runtime_test.cpp
tools/: check_lens_assets.py  generate_lens_assets.py  generate_lens_fonts.ps1
